--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,6 +2,25 @@
     box-sizing: border-box;
   }
 
+.is-invalid {
+  border-color: red !important;
+}
+
+.error-message {
+  color: red;
+}
+
+.errorSpan {
+  width: 100%;
+  height: 30px;
+  color: red;
+  background-color:lightgrey;
+  margin-bottom: 1rem;
+  text-align: center;
+  padding-top: 0.3rem;
+}
+
+
 form {
     background: #f9f9f9;
     border: 1px solid #c1c1c1;
@@ -14,7 +33,7 @@ form {
   }
   form input {
     width: 100%; 
-    margin-bottom: 10px; 
+    // margin-bottom: 10px; 
     border: none;
     padding: 10px;
     color: black;
