--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,28 @@
-<p>
-  dashboard works!
-</p>
+<div class="grid" >
+    <div id="search-results" *ngIf="likedMovies">
+      <div> Movied Liked By You...</div>
+      <div id="space"></div>
+      <div *ngFor="let movie of likedMovies">
+      <mat-card >
+          <mat-card-title>{{movie.Title}}</mat-card-title>
+          <mat-card-subtitle>{{movie.Type | uppercase }}</mat-card-subtitle>
+          <div class="left">
+          <img mat-card-image src= "{{movie.Poster}}" alt="image of {{movie.Title}}"/>
+          </div>
+          <div class="right">
+          <mat-card-content>
+            <p>{{movie.Title}}</p>
+            <p>Year : {{movie.Year}}</p>
+          </mat-card-content>
+          <mat-card-actions>
+              <button mat-button id="details" (click)="getDetails(movie)">Get Details</button>
+          </mat-card-actions>
+        </div>    
+      </mat-card>
+    </div>
+    </div>
+    <div *ngIf="!likedMovies">
+      You have not liked any movies. Please Explore...
+    </div>
+  </div>
+  
