--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,3 +1,33 @@
-<p>
-  explore works!
-</p>
+<div class="grid">
+  <div id="search-panel">
+    <input type="text" placeholder="Search" id="searchInput"/>
+    <button type="submit" id="searchBtn">Search</button>
+  </div>
+  <div id="search-results" *ngIf="movieList">
+    <div *ngFor="let movie of movieList">
+    <mat-card >
+        <mat-card-title>{{movie.Title}}</mat-card-title>
+        <mat-card-subtitle>{{movie.Type | uppercase }}</mat-card-subtitle>
+        <div class="left">
+        <img mat-card-image src= "{{movie.Poster}}" alt="image of {{movie.Title}}"/>
+        </div>
+        <div class="right">
+        <mat-card-content>
+          <p>{{movie.Title}}</p>
+          <p>Year : {{movie.Year}}</p>
+        </mat-card-content>
+        <mat-card-actions>
+            <span *ngIf="!movie.liked; else undo">
+                <button mat-button id="like" (click)="likeClicked(movie)">LIKE</button>
+            </span>
+              <ng-template #undo>
+                <button mat-button id="unlike" (click)="unLikeClicked(movie)">UNDO</button>
+              </ng-template>
+            <button mat-button id="details" (click)="getDetails(movie)">Get Details</button>
+        </mat-card-actions>
+      </div>
+        
+    </mat-card>
+  </div>
+  </div>
+</div>
