--- a/src/app/explore/explore.component.scss
+++ b/src/app/explore/explore.component.scss
@@ -1,11 +1,17 @@
 .grid {
-    margin: 2rem 4rem;
+    margin: 0rem 4rem;
+}
+
+.outer-grid {
+    background-color: black;
 }
 
 .left {
     min-height: 100%;
     float: left; 
 }
+
+
 
 .right {
     float: left;
@@ -47,7 +53,6 @@
     padding: 0.7rem 1rem;
     min-width: 20rem;
     border-radius: 0.3rem;
-    cursor: pointer;
     border: 1px solid lightgray;
 }
 
