--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -10,24 +10,24 @@
       <div class="right">
         <mat-card-content>
           <p>{{selectedMovie.Title}}</p>
-          <p>Year : {{selectedMovie.Year}}</p>
-          <p>Actors: {{selectedMovie.Actors}}</p>
-          <p>Released: {{selectedMovie.Released}}</p>
-          <p>Genre: {{selectedMovie.Genre}}</p>
-          <p>Director: {{selectedMovie.Director}}</p>
-          <p>Language: {{selectedMovie.Language}}</p>
+          <p><b>Year : </b>{{selectedMovie.Year}}</p>
+          <p><b>Actors: </b>{{selectedMovie.Actors}}</p>
+          <p><b>Released: </b>{{selectedMovie.Released}}</p>
+          <p><b>Genre: </b>{{selectedMovie.Genre}}</p>
+          <p><b>Director: </b>{{selectedMovie.Director}}</p>
+          <p><b>Language: </b>{{selectedMovie.Language}}</p>
 
         </mat-card-content>
       </div>
       <div id="summary">
-        Summary:
+          <b>Summary:</b>
         <p></p>
         <mat-card-content>
-          <p>Plot: {{selectedMovie.Plot}}</p>
-          <p>Awards: {{selectedMovie.Awards}}</p>
-          <p>IMDB Rating: {{selectedMovie.imdbRating}}</p>
-          <p>IMDB Votes: {{selectedMovie.imdbVotes}}</p>
-          <p>Production: {{selectedMovie.Production}}</p>
+          <p><b>Plot:</b> {{selectedMovie.Plot}}</p>
+          <p><b>Awards: </b>{{selectedMovie.Awards}}</p>
+          <p><b>IMDB Rating:</b> {{selectedMovie.imdbRating}}</p>
+          <p><b>IMDB Votes:</b> {{selectedMovie.imdbVotes}}</p>
+          <p><b>Production:</b> {{selectedMovie.Production}}</p>
         </mat-card-content>
       </div>
     </mat-card>
